maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:78: error: not found: type statement
def rechercheASuivre():statement = {
                       ^